--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
   },
-  "include": ["src"],
+  "include": ["src", "types"],
   "exclude": ["node_modules"]
   }
   
