--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
+    "typeRoots": ["./node_modules/@types", "src/types"]
   },
-  "include": ["src", "types"],
+  "include": ["src/**/*", "src/types/**/*"],
   "exclude": ["node_modules"]
   }
   
